feat: add login api doc
