# controllers/doc_response_models.go
@@ -1,6 +1,12 @@
 package controllers
 
 type _ResponseRegister struct {
-	Code ResCode `json:"code"` // 1000
-	Msg  string  `json:"msg"`  // success
+	Code ResCode `json:"code" example:"1000"`     // 状态码
+	Msg  string  `json:"msg" example:"Success!!"` // 信息
+}
+
+type _ResponseLogin struct {
+	Code ResCode     `json:"code" example:"1000"`     // 状态码
+	Msg  string      `json:"msg" example:"Success!!"` // 信息
+	Data interface{} `json:"data"`                    // 数据
 }
